engine-net-2/examples/Errors/ProcedureMethodParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec { n:N=null; (i:int)=n.p(42) }

quit
